<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <ImageView
	        android:id="@+id/ivImage"        
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="5dp"	        
	        android:src="@drawable/elpostino" />
	    
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    

			<TextView
		        android:id="@+id/tvCompany"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
	        	android:layout_marginLeft="5dp"	
		        android:textSize="@dimen/font_size_16"
		        android:text="@string/tvCompany"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
		        android:textColor="@color/white"/>
		
		    <TextView
		        android:id="@+id/tvAddress"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
	        	android:layout_marginLeft="5dp"	
		        android:textSize="@dimen/font_size_16"
		        android:text="@string/tvAddress"
		        android:textAppearance="?android:attr/textAppearanceSmall" 
		        android:textColor="@color/white"/>
		
		    <TextView
		        android:id="@+id/tvCercania"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
	        	android:layout_marginLeft="5dp"	
		        android:textSize="@dimen/font_size_16"
		        android:text="@string/tvCercania"
		        android:textAppearance="?android:attr/textAppearanceSmall" 
		        android:textColor="@color/white"/>

		</LinearLayout>
		
	</LinearLayout>    

</LinearLayout>