<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomejorado"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="20dp"
        android:src="@drawable/logoretocado" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"        
        android:textSize="@dimen/font_titulo_principal"
        android:textColor="@color/white"
        android:text="@string/tvTitle" />

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dp"
    	android:gravity="center" >

        <EditText
            android:id="@+id/etFiend"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/etFiend"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="vertical" >
    	
        <Button
            android:id="@+id/btnCategory"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="@color/lightblue"
            android:textStyle="bold"
            android:text="@string/btnCategory"
            android:textColor="@color/white"
            android:textSize="@dimen/font_boton_principal" />
        
    </LinearLayout>
        
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="32dp"
    	android:layout_marginTop="20dp"
    	android:gravity="center" >
	    
        <TextView
            android:id="@+id/tvEncuentranos"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/tvFiendMe"
            android:textColor="@color/white"
            android:textSize="@dimen/font_pie_principal" />
        
        <ImageView
            android:id="@+id/ivMail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/menumail" />

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/menufacebook" />

        <ImageView
            android:id="@+id/ivTwitter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/menupajarito" />
        
    </LinearLayout>
    
    <ImageView
        android:id="@+id/ivPublicity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/publicidad" />

</LinearLayout>