<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	    <LinearLayout 
	        android:id="@+id/relativeLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="45dp"
	        android:background="@drawable/fondomejorado"
	        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/logoretocado" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/tvTitle"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout1"
        android:layout_weight="50"
        android:background="@drawable/fondomejorado" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/celeste"
            android:orientation="horizontal" >
	        
	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="90dp"
	            android:layout_height="90dp"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_margin="5dp"
	            android:src="@drawable/elpostino2" />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/celeste"
	            android:orientation="vertical" >
		
		         <TextView
	                android:id="@+id/txtRazonSocial"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="2dp"
	                android:text="Large Text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white"
	                android:textStyle="bold" />

	            <TextView
	                android:id="@+id/txtDetalle"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="1dp"
	                android:text="Medium Text"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/white" />

	            <TextView
	                android:id="@+id/txtDireccion"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="1dp"
	                android:text="Medium Text"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/white" />
		
		        <TextView
		            android:id="@+id/txtTelefono"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="1dp"
		            android:text="Medium Text"
		            android:textAppearance="?android:attr/textAppearanceMedium" 
		            android:textColor="@color/white"/>
		
		        <TextView
		            android:id="@+id/txtCorreoElectronico"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="1dp"
		            android:text="Medium Text"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textColor="@color/white" />
		
		        <TextView
		            android:id="@+id/txtSitioWeb"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_margin="1dp"
		            android:text="Medium Text"
		            android:textAppearance="?android:attr/textAppearanceMedium" 
		            android:textColor="@color/white"/>

			</LinearLayout>
		
		</LinearLayout>
		
    </LinearLayout>

     <LinearLayout
         android:id="@+id/relativeLayout3"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/relativeLayout2"
         android:layout_weight="0"
         android:background="@drawable/fondomejorado"
         android:gravity="center" >

         <Button
             android:id="@+id/btnRegresar"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:background="@color/celeste"
             android:text="@string/btnRegresar"
             android:textColor="@color/white"
             android:textStyle="bold" />

         <Button
             android:id="@+id/btnMapa"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:background="@color/celeste"
             android:text="@string/btnMapa"
             android:textColor="@color/white"
             android:textStyle="bold" />

         <Button
             android:id="@+id/btnLlamar"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:background="@color/celeste"
             android:text="@string/btnLlamar"
             android:textColor="@color/white"
             android:textStyle="bold" />

     </LinearLayout>
     
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:layout_below="@+id/relativeLayout2"
       android:layout_weight="15"
       android:background="@drawable/fondomejorado" >

    </LinearLayout>

</LinearLayout>
